# cppmanifest

./: .gitignore  CMakeLists.txt  README.md
.cmake/: VersionUtils.cmake
include/: build_info.h  build_info.h.template  cppmanifest.h  version.h
src/: main.cpp
